Put intermediate stops behind an option

--- a/app/views/routes/_in_route.html.haml
+++ b/app/views/routes/_in_route.html.haml
@@ -114,15 +114,16 @@
                     .btn-group
                       %a.marker.btn.btn-default.btn-xs{href: "#", title: t("plannings.edit.marker_help")}
                         %i.fa.fa-map-marker
-                    .dropdown.btn-group
-                      %button.btn.btn-default.btn-xs.dropdown-toggle{type: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false", title: t("plannings.edit.create_store_help")}
-                        %i.fa.fa-plus
-                      %ul.dropdown-menu.pull-right.store-dropdown{role: "menu"}
-                        - @available_stores.each do |store|
-                          %li
-                            %a.dropdown-item{href: "#", "data-route-id": route[:route_id], "data-store-id": store[:id], "data-store-name": store[:name], class: "store-option"}
-                              %i.fa.fa-fw{class: "#{store[:icon] || 'fa-store'}", style: "color: #{store[:color] || 'black'};"}
-                              = store[:name]
+                    - if current_user.customer.enable_store_stops
+                      .dropdown.btn-group
+                        %button.btn.btn-default.btn-xs.dropdown-toggle{type: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false", title: t("plannings.edit.create_store_help")}
+                          %i.fa.fa-plus
+                        %ul.dropdown-menu.pull-right.store-dropdown{role: "menu"}
+                          - @available_stores.each do |store|
+                            %li
+                              %a.dropdown-item{href: "#", "data-route-id": route[:route_id], "data-store-id": store[:id], "data-store-name": store[:name], class: "store-option"}
+                                %i.fa.fa-fw{class: "#{store[:icon] || 'fa-store'}", style: "color: #{store[:color] || 'black'};"}
+                                = store[:name]
       = render partial: 'stops/list', locals: { route: route, summary: summary }
       %ul.stops.list-group{ style: ("display: none" if route[:hidden]) }
         %li.d-fake-flex.align-items-center.list-group-item{class: ('ui-state-error' if route[:store_stop]&.[](:error)), data: { store_id: route[:store_stop]&.[](:id)}.compact}
@@ -165,12 +166,13 @@
                   .btn-group
                     %a.marker.btn.btn-default.btn-xs{href: "#", title: t("plannings.edit.marker_help")}
                       %i.fa.fa-map-marker
-                  .dropdown.btn-group
-                    %button.btn.btn-default.btn-xs.dropdown-toggle{type: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false", title: t("plannings.edit.create_store_help")}
-                      %i.fa.fa-plus
-                    %ul.dropdown-menu.pull-right.store-dropdown{role: "menu"}
-                      - @available_stores.each do |store|
-                        %li
-                          %a.dropdown-item{href: "#", "data-route-id": route[:route_id], "data-store-id": store[:id], "data-store-name": store[:name], class: "store-option"}
-                            %i.fa.fa-fw{class: "#{store[:icon] || 'fa-store'}", style: "color: #{store[:color] || 'black'};"}
-                            = store[:name]
+                  - if current_user.customer.enable_store_stops
+                    .dropdown.btn-group
+                      %button.btn.btn-default.btn-xs.dropdown-toggle{type: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false", title: t("plannings.edit.create_store_help")}
+                        %i.fa.fa-plus
+                      %ul.dropdown-menu.pull-right.store-dropdown{role: "menu"}
+                        - @available_stores.each do |store|
+                          %li
+                            %a.dropdown-item{href: "#", "data-route-id": route[:route_id], "data-store-id": store[:id], "data-store-name": store[:name], class: "store-option"}
+                              %i.fa.fa-fw{class: "#{store[:icon] || 'fa-store'}", style: "color: #{store[:color] || 'black'};"}
+                              = store[:name]
