--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1026,3 +1026,95 @@ input.form-control.number-of-days {
   width: fit-content !important;
   min-width: 0;
 }
+
+.route-info {
+  white-space: nowrap;
+  margin: 2px;
+  padding: 7px 6px 2px 6px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 34px;
+
+  .fa {
+    margin-right: 4px;
+  }
+
+  .fa.unit {
+    margin-left: 4px;
+  }
+}
+
+.stop-info {
+  padding: 0 2px;
+  text-align: center;
+  height: 22px;
+  margin: 0 6px;
+}
+
+.timewindow-info {
+  max-width: 99%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.stop-label {
+  margin: 0 !important;
+  line-height: unset !important;
+  border-radius: 0 !important;
+  font-weight: 600 !important;
+  font: 14px/1.5 Helvetica Neue,Arial,Helvetica,sans-serif;
+}
+
+.info.route-info, .info.stop-info {
+  border: 1px solid $grey-color;
+  background-color: $lightgrey-color;
+}
+
+.primary.route-info, .primary.stop-info {
+  border: 1px solid $primary-border-color;
+  background-color: $primary-background-color;
+}
+
+.success.route-info, .success.stop-info {
+  border: 1px solid $success-border-color;
+  background-color: $success-background-color;
+}
+
+.danger.route-info, .danger.stop-info {
+  border: 1px solid $danger-border-color !important;
+  background-color: $warning-color !important;
+  background: #fef1ec image-url("ui-bg_glass_95_fef1ec_1x400") 50% 50% repeat-x;
+  color: $danger-color !important;
+}
+
+.inactive.route-info {
+  border: 1px solid lightgray;
+  background-color: #eee;
+  color: #555
+}
+
+.info.stop-info {
+  border: 1px solid lightgray;
+  background-color: $primary-background-color;
+}
+
+.stop-info {
+  .editable:hover {
+    cursor: pointer;
+    text-decoration-line: underline !important;
+  }
+
+  input.editable {
+    border: solid darkgrey 1px;
+    background-color: unset;
+    border-radius: 4px;
+    font-size: unset;
+    height: 18px;
+    margin: 1px 0px;
+    padding: 0;
+    text-align: center;
+    width: 44px;
+  }
+
+}
