--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -142,7 +142,7 @@ a.btn-default {
   opacity: unset;
 }
 
-.leaflet-draw-tooltip {
+.leaflet-pm-tooltip {
   display: none;
 }
 
@@ -261,25 +261,6 @@ label .popover {
 
 ul.leaflet-control-geocoder-alternatives {
   width: inherit;
-}
-
-/* Leaflet draw */
-.leaflet-draw-actions {
-  a {
-    background-color: #3071A9;
-    border-color: #285E8E;
-    color: #FFF;
-  }
-
-  a:hover {
-    background-color: #3071A9;
-    text-decoration: none;
-    color: #FFF;
-  }
-
-  li a {
-    color: #FFF;
-  }
 }
 
 /* jquery-simplecolorpicker */
@@ -1347,4 +1328,44 @@ small {
 
 @keyframes spinner-border {
   to { transform: rotate(360deg) #{"/* rtl:ignore */"}; }
+}
+
+.leaflet-container {
+  font-size: unset; /* Reset font-size to inherit from parent */
+  font-family: unset; /* Reset font-family to inherit from parent */
+  line-height: unset; /* Reset line-height to inherit from parent */
+}
+
+.marker-icon, .marker-icon:focus {
+  background-color: #fff;
+  border: 3px solid #707070;
+  border-radius: 50%;
+  margin: -10px 0 0 -10px !important;
+  width: 20px !important;
+  height: 20px !important;
+  outline: 0;
+  -webkit-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+}
+
+.marker-icon:hover {
+  border: 4px solid $gray-900;
+}
+
+.marker-icon-middle,
+.marker-icon-middle:focus {
+  opacity: .7;
+  margin: -8px 0 0 -8px !important;
+  width: 16px !important;
+  height: 16px !important;
+  border: 3px solid #707070;
+  background-color: #fff;
+  border-radius: 50%;
+  outline: 0;
+  -webkit-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+}
+
+.marker-icon-middle:hover {
+  border: 4px solid $gray-900;
 }
