--- a/app/templates/modals/optimize.mustache
+++ b/app/templates/modals/optimize.mustache
@@ -31,3 +31,13 @@
 <p class="dialog-no-solution" style="display: none">
   {{#i18n}}plannings.edit.dialog.optimizer.no_solution{{/i18n}}
 </p>
+
+<div id="optimization-details" class="mt-3" style="display: none">
+  <a class="accordion-toggle" data-parent="" data-toggle="collapse" href="#collapseSolverDetails">
+    <i class="fa fa-chevron-down"></i>
+  </a>
+  <div id="collapseSolverDetails" class="collapse">
+    <div id="solvers-list"></div>
+    <div id="skipped-services-list"></div>
+  </div>
+</div>
