Zone download should not replace page url

--- a/app/templates/zones/_show.mustache
+++ b/app/templates/zones/_show.mustache
@@ -10,7 +10,7 @@
       {{/manage_edit}}
       <div class="btn-group pull-right">
         <button type="button" class="btn btn-xs btn-default center_view" title="{{#i18n}}zonings.edit.center_view_help{{/i18n}}"><i class="fa fa-expand fa-fw"></i></button>
-        <a href="/zones/{{id}}.excel/?zoning_id={{zoning_id}}{{#planning_id}}&planning_id={{planning_id}}{{/planning_id}}" class="btn btn-default btn-xs" title="{{#i18n}}destinations.menu.export_spreadsheet_standard{{/i18n}}"><i class="fa fa-download fa-fw"></i></a>
+        <a href="/zones/{{id}}.excel?zoning_id={{zoning_id}}{{#planning_id}}&planning_id={{planning_id}}{{/planning_id}}" class="btn btn-default btn-xs" title="{{#i18n}}destinations.menu.export_spreadsheet_standard{{/i18n}}"><i class="fa fa-download fa-fw"></i></a>
         <button type="button" class="delete btn btn-danger btn-xs" title="{{#i18n}}all.verb.destroy{{/i18n}}"><i class="fa fa-trash fa-fw"></i></button>
       </div>
     </div>
