--- a/app/templates/routes_by_vehicles/_show.mustache
+++ b/app/templates/routes_by_vehicles/_show.mustache
@@ -166,6 +166,9 @@
             {{#out_of_max_ride_duration}}
               <i class="fa fa-stopwatch-20 fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i>
             {{/out_of_max_ride_duration}}
+            {{#out_of_max_reload}}
+              <i class="fa fa-arrows-rotate fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_reload_help{{/i18n}}"></i>
+            {{/out_of_max_reload}}
             {{#out_of_relation}}
               <i class="fa fa-link-slash fa-fw" title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"></i>
             {{/out_of_relation}}
