--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -151,6 +151,9 @@
     {{#out_of_max_ride_duration}}
       <li><i class="fa fa-stopwatch-20 fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}</li>
     {{/out_of_max_ride_duration}}
+    {{#out_of_max_reload}}
+      <li><i class="fa fa-arrows-rotate fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_reload_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_reload{{/i18n}}</li>
+    {{/out_of_max_reload}}
     {{#out_of_relation}}
       <li><i class="fa fa-link-slash fa-fw" title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_relation{{/i18n}}</li>
     {{/out_of_relation}}
