Favor a common tool controller for admin tools

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,13 +35,13 @@
                       .hidden-menu
                         = t 'admin.users.menu.users'
                 %li.menu-section.menu-list-item
-                  = link_to delayed_job_path do
+                  = link_to admin_tools_delayed_job_path do
                     .d-flex.align-items-center.justify-content-center
                       %i.fa.fa-tower-observation.fa-fw
                       .hidden-menu
                         = t 'admin.jobs.menu.observation'
                 %li.menu-section.menu-list-item
-                  = link_to admin_performance_path do
+                  = link_to admin_tools_performance_path do
                     .d-flex.align-items-center.justify-content-center
                       %i.fa.fa-chart-area.fa-fw
                       .hidden-menu
